@@ -1,11 +1,11 @@
 CORE
 sequence_and3.sv
 
-^\[.*\] \(\(1 or \(##2 1\)\) and 1\) \|-> main\.x == 2: PROVED up to bound 5$
-^\[.*\] \(1 and \(1 or \(##2 1\)\)\) \|-> main\.x == 2: PROVED up to bound 5$
+^\[.*\] \(\(1 or \(##2 1\)\) and 1\) \|-> main\.x == 2: REFUTED$
+^\[.*\] \(1 and \(1 or \(##2 1\)\)\) \|-> main\.x == 2: REFUTED$
 ^\[.*\] \(\(1 or \(##2 1\)\) and 1\) \|-> main\.x == 0 \|\| main\.x == 2: PROVED up to bound 5$
 ^\[.*\] \(1 and \(1 or \(##2 1\)\)\) \|-> main\.x == 0 \|\| main\.x == 2: PROVED up to bound 5$
-^EXIT=0$
+^EXIT=10$
 ^SIGNAL=0$
 --
 ^warning: ignoring
